Fix input width bug on Safari

--- a/src/app.css
+++ b/src/app.css
@@ -1108,6 +1108,7 @@ body:has(.status-deck) .media-post-link {
 }
 .szh-menu .szh-menu__item form > input[type='text'] {
   flex-grow: 1;
+  min-width: 0;
 }
 .szh-menu .szh-menu__item--hover .danger-icon {
   color: var(--red-color);
